MODON MRE BPDEV/force-app/main/default/objects/Point_Of_Contact__c/Point_Of_Contact__c.object-meta.xml
<CustomObject>
    <label>Point Of Contact</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Point Of Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Point Of Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>