MODON MRE BPDEV/force-app/main/default/objects/Point_Of_Contact__c/fields/EIDNumber__c.field-meta.xml
<CustomField>
    <fullName>EIDNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EIDNumber</label>
    <length>100</length>
    <type>Text</type>
</CustomField>