MODON MRE BPDEV/force-app/main/default/objects/Point_Of_Contact__c/fields/HeadOfStateOrOfGovernment__c.field-meta.xml
<CustomField>
    <fullName>HeadOfStateOrOfGovernment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HeadOfStateOrOfGovernment</label>
    <type>Checkbox</type>
</CustomField>