MODON MRE BPDEV/force-app/main/default/objects/Point_Of_Contact__c/fields/ImportantPoliticalPartyOfficial__c.field-meta.xml
<CustomField>
    <fullName>ImportantPoliticalPartyOfficial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ImportantPoliticalPartyOfficial</label>
    <type>Checkbox</type>
</CustomField>