MODON MRE BPDEV/force-app/main/default/objects/Point_Of_Contact__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Point Of Contacts</relationshipLabel>
    <relationshipName>Point_Of_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>