MODON MRE BPDEV/force-app/main/default/objects/Point_Of_Contact__c/fields/MemberOfRulingRoyalFamily__c.field-meta.xml
<CustomField>
    <fullName>MemberOfRulingRoyalFamily__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MemberOfRulingRoyalFamily</label>
    <type>Checkbox</type>
</CustomField>