MODON MRE BPDEV/force-app/main/default/objects/Point_Of_Contact__c/fields/Ownership_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Percentage__c</fullName>
    <label>Ownership Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>