MODON MRE BPDEV/force-app/main/default/objects/Point_Of_Contact__c/fields/PassportExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>PassportExpiryDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PassportExpiryDate</label>
    <type>Date</type>
</CustomField>