MODON MRE BPDEV/force-app/main/default/objects/Point_Of_Contact__c/fields/PassportIssueDate__c.field-meta.xml
<CustomField>
    <fullName>PassportIssueDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PassportIssueDate</label>
    <type>Date</type>
</CustomField>