MODON MRE BPDEV/force-app/main/default/objects/Point_Of_Contact__c/fields/RelatedToPoliticalExposedPerson__c.field-meta.xml
<CustomField>
    <fullName>RelatedToPoliticalExposedPerson__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RelatedToPoliticalExposedPerson</label>
    <type>Checkbox</type>
</CustomField>