MODON MRE BPDEV/force-app/main/default/objects/Point_Of_Contact__c/fields/Salutation__c.field-meta.xml
<CustomField>
    <fullName>Salutation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Salutation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>