MODON MRE BPDEV/force-app/main/default/objects/Point_Of_Contact__c/fields/SeniorExecutiveOfStateOwnedCorporation__c.field-meta.xml
<CustomField>
    <fullName>SeniorExecutiveOfStateOwnedCorporation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SeniorExecutiveOfStateOwnedCorporation</label>
    <type>Checkbox</type>
</CustomField>