MODON MRE BPDEV/force-app/main/default/objects/Point_Of_Contact__c/fields/SeniorGovernmentJudicialOrMilitaryOffice__c.field-meta.xml
<CustomField>
    <fullName>SeniorGovernmentJudicialOrMilitaryOffice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SeniorGovernmentJudicialOrMilitaryOffice</label>
    <type>Checkbox</type>
</CustomField>