MODON MRE BPDEV/force-app/main/default/objects/Point_Of_Contact__c/fields/SeniorPolitician__c.field-meta.xml
<CustomField>
    <fullName>SeniorPolitician__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SeniorPolitician</label>
    <type>Checkbox</type>
</CustomField>